--- a/rstudio/roles/common/tasks/main.yml
+++ b/rstudio/roles/common/tasks/main.yml
@@ -1,7 +1,11 @@
 ---
-- name: upgrade all packages
+- name: Only run "update_cache=yes" if the last one is more than 3600 seconds ago
   apt:
     force_apt_get: yes
-    name: '*'
-    state: latest
-
+    update_cache: yes
+    cache_valid_time: 3600
+    upgrade: safe
+- name: install pip
+  apt:
+    force_apt_get: yes
+    pkg: python3-pip
