--- a/jupyterhub/deploy.yml
+++ b/jupyterhub/deploy.yml
@@ -10,8 +10,6 @@
 
 - hosts:
   - proxy
-  vars_files:
-  - vars.yml
   roles:
   - docker
   tags:
@@ -19,10 +17,15 @@
 
 - hosts:
   - proxy
-  vars_files:
-  - vars.yml
   roles:
   - proxy
   tags:
   - proxy
+
+- hosts:
+  - jupyterhub_hosts
+  roles:
+  - hub
+  tags:
+  - hub
 
